--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@
 
 /* Custom CSS Variables */
 :root {
-  --font-sans: "Raleway", sans-serif;
+  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   --color-custom-50: #fdfdfd;
   --color-custom-100: #d0d0d0;
   --color-custom-200: #b3b3b3;
